--- a/prepros-6.config
+++ b/prepros-6.config
@@ -41,7 +41,7 @@
     },
     {
       "path": "assets/sass/sass/modules/_module-layout.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     },
     {
       "path": "assets/sass/sass/modules/_module-pickup-items.scss",
@@ -50,18 +50,18 @@
     {
       "path": "assets/sass/sass/parts/_parts-wrapuplist.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
-    },
-    {
-      "path": "assets/sass/sass/parts/_font-icon.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "assets",
-      "assets/sass/sass/pages",
       "assets/sass",
-      "assets/sass/sass"
+      "assets/sass/sass",
+      "assets/sass/sass/pages",
+      "css",
+      "assets/sass/sass/config",
+      "assets/sass/sass/parts",
+      "assets/sass/sass/modules"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -89,19 +89,12 @@
         "assets/sass/sass/parts/_parts-tables.scss",
         "assets/sass/sass/parts/_parts-typography.scss",
         "assets/sass/sass/parts/_parts-wrapuplist.scss",
-        "assets/sass/sass/parts/font/_animation.scss",
-        "assets/sass/sass/parts/font/_fontello-codes.scss",
-        "assets/sass/sass/parts/font/_fontello-embedded.scss",
-        "assets/sass/sass/parts/font/_fontello-ie7-codes.scss",
-        "assets/sass/sass/parts/font/_fontello-ie7.scss",
-        "assets/sass/sass/parts/font/_fontello.scss",
         "assets/sass/sass/modules/_module-list.scss",
         "assets/sass/sass/modules/_module-modal.scss",
         "assets/sass/sass/modules/_module-pickup-items.scss",
         "assets/sass/sass/layout/_layout.scss",
         "assets/sass/sass/layout/_header.scss",
-        "assets/sass/sass/layout/_footer.scss",
-        "assets/sass/sass/parts/_font-icon.scss"
+        "assets/sass/sass/layout/_footer.scss"
       ]
     },
     {
@@ -117,8 +110,7 @@
         "assets/sass/sass/parts/_parts-tables.scss",
         "assets/sass/sass/parts/_parts-typography.scss",
         "assets/sass/sass/modules/_module-list.scss",
-        "assets/sass/sass/modules/_module-modal.scss",
-        "assets/sass/sass/parts/_font-icon.scss"
+        "assets/sass/sass/modules/_module-modal.scss"
       ]
     },
     {
@@ -135,19 +127,19 @@
         "assets/sass/sass/parts/_parts-tables.scss",
         "assets/sass/sass/parts/_parts-typography.scss",
         "assets/sass/sass/parts/_parts-wrapuplist.scss",
-        "assets/sass/sass/parts/font/_animation.scss",
-        "assets/sass/sass/parts/font/_fontello-codes.scss",
-        "assets/sass/sass/parts/font/_fontello-embedded.scss",
-        "assets/sass/sass/parts/font/_fontello-ie7-codes.scss",
-        "assets/sass/sass/parts/font/_fontello-ie7.scss",
-        "assets/sass/sass/parts/font/_fontello.scss",
         "assets/sass/sass/modules/_module-list.scss",
         "assets/sass/sass/modules/_module-modal.scss",
         "assets/sass/sass/modules/_module-pickup-items.scss",
         "assets/sass/sass/layout/_layout.scss",
         "assets/sass/sass/layout/_header.scss",
-        "assets/sass/sass/layout/_footer.scss",
-        "assets/sass/sass/parts/_font-icon.scss"
+        "assets/sass/sass/layout/_footer.scss"
+      ]
+    },
+    {
+      "path": "assets/sass/sass/layout/_footer.scss",
+      "imports": [
+        "assets/sass/sass/config/_config.scss",
+        "assets/sass/sass/mixin/_mixin.scss"
       ]
     },
     {
@@ -160,52 +152,63 @@
     {
       "path": "assets/sass/sass/modules/_module-layout.scss",
       "imports": [
-        "assets/sass/sass/parts/_parts-grids.scss"
-      ]
-    },
-    {
-      "path": "assets/sass/sass/modules/_module-list.scss",
-      "imports": [
+        "assets/sass/sass/parts/_parts-grids.scss",
         "assets/sass/sass/config/_config.scss",
-        "assets/sass/sass/mixin/_mixin.scss",
-        "assets/sass/sass/parts/_font-icon.scss"
+        "assets/sass/sass/mixin/_mixin.scss"
       ]
     },
     {
-      "path": "assets/sass/sass/pages/_top.scss",
+      "path": "assets/sass/sass/parts/_parts-basic.scss",
       "imports": [
         "assets/sass/sass/config/_config.scss",
         "assets/sass/sass/mixin/_mixin.scss"
       ]
     },
     {
-      "path": "assets/sass/sass/kanarium-cord.scss",
+      "path": "assets/sass/sass/parts/_parts-buttons.scss",
       "imports": [
         "assets/sass/sass/config/_config.scss",
-        "assets/sass/sass/mixin/_mixin.scss",
-        "assets/sass/sass/base.scss",
-        "assets/sass/sass/pages/_top.scss",
-        "assets/sass/sass/parts/_reset.scss",
-        "assets/sass/sass/parts/_parts-basic.scss",
-        "assets/sass/sass/parts/_parts-buttons.scss",
-        "assets/sass/sass/parts/_parts-forms.scss",
-        "assets/sass/sass/parts/_parts-grids.scss",
-        "assets/sass/sass/parts/_parts-tables.scss",
-        "assets/sass/sass/parts/_parts-typography.scss",
-        "assets/sass/sass/parts/_parts-wrapuplist.scss",
-        "assets/sass/sass/parts/_parts-slider.scss",
-        "assets/sass/sass/parts/_font-icon.scss",
-        "assets/sass/sass/modules/_module-list.scss",
-        "assets/sass/sass/modules/_module-modal.scss",
-        "assets/sass/sass/modules/_module-pickup-items.scss",
-        "assets/sass/sass/layout/_layout.scss",
-        "assets/sass/sass/layout/_header.scss",
-        "assets/sass/sass/layout/_footer.scss"
+        "assets/sass/sass/mixin/_mixin.scss"
+      ]
+    },
+    {
+      "path": "assets/sass/sass/parts/_parts-forms.scss",
+      "imports": [
+        "assets/sass/sass/config/_config.scss",
+        "assets/sass/sass/mixin/_mixin.scss"
+      ]
+    },
+    {
+      "path": "assets/sass/sass/parts/_parts-grids.scss",
+      "imports": [
+        "assets/sass/sass/config/_config.scss",
+        "assets/sass/sass/mixin/_mixin.scss"
+      ]
+    },
+    {
+      "path": "assets/sass/sass/parts/_parts-tables.scss",
+      "imports": [
+        "assets/sass/sass/config/_config.scss",
+        "assets/sass/sass/mixin/_mixin.scss"
+      ]
+    },
+    {
+      "path": "assets/sass/sass/parts/_parts-typography.scss",
+      "imports": [
+        "assets/sass/sass/config/_config.scss",
+        "assets/sass/sass/mixin/_mixin.scss"
+      ]
+    },
+    {
+      "path": "assets/sass/sass/parts/_parts-wrapuplist.scss",
+      "imports": [
+        "assets/sass/sass/config/_config.scss",
+        "assets/sass/sass/mixin/_mixin.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
